# cloudsmith-exercise-stage-2

./: .env.example  .gitignore  README.md  docker-compose.yml  integration_tests  pyproject.toml
services/query_api/: README.md  pyproject.toml
services/query_api/query_api/: datastore.py  main.py  models.py  repository.py  routes.py
services/query_api/tests/: test_routes.py
services/transform_service/: Dockerfile  README.md  __init__.py  main.py  models.py  parser.py  pyproject.toml  storage.py  transformer.py
services/transform_service/tests/: test_parser.py  test_transformer.py
services/transform_service/transform_service/: main.py  models.py  parser.py  storage.py  transformer.py
