[tool.poetry]
name = "query-api"
version = "0.1.0"
description = "Query API service"
authors = ["aidanewen <aidanewen@example.com>"]
packages = [{include = "query_api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.8.0"
minio = "^7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
